script: implement pointer events
Remaining failures are due to the missing implementation of
the pointer capture and pointer lock APIs, as well as:

Requires User Activation support:
/html/user-activation/activation-trigger-pointerevent.html?mouse

Blocked on https://github.com/servo/servo/issues/41227 :
/pointerevents/compat/pointerevent_mouse-pointer-on-scrollbar.html

Requires persistentDeviceId:
/pointerevents/persistentDeviceId/get-persistendeviceid-from-pointer-event.tentative.html
/pointerevents/persistentDeviceId/get-persistendeviceid-from-pointer-mouse-event.tentative.html

Requires pointerenter, pointerover, pointerout, pointerleave events:
/pointerevents/pointerevent_pointerId_scope.html

Requires pointerrawupdate event:
/pointerevents/pointerevent_pointerrawupdate.html
/pointerevents/pointerevent_pointerrawupdate.https.html

Consider implementing non-standard attributes toElement and fromElement:
See https://w3c.github.io/pointerevents/#attributes-and-default-actions

Fails because the pointerId is always 0 for pointermove, maybe caused by commit 7b00b54ee83 :
/pointerevents/pointerevent_pointermove_isprimary_same_as_pointerdown.html?touch
https://github.com/servo/servo/issues/41250

Signed-off-by: webbeef <me@webbeef.org>

--- a/tests/wpt/tests/pointerevents/pointerevent_capture_mouse.html
+++ b/tests/wpt/tests/pointerevents/pointerevent_capture_mouse.html
@@ -139,7 +139,7 @@
                 on_event(target1, "pointermove", function (event) {
                     test(function() {
                         assert_false(isPointerCapture, "pointermove shouldn't trigger for this target when capture is enabled");
-                    }, "pointermove shouldn't trigger for the purple rectangle while the black rectangle has capture");
+                    }, `pointermove shouldn't trigger for the purple rectangle while the black rectangle has capture, isPointerCapture=${isPointerCapture}`);
 
                     if(!pointermoveNoCaptureGot1) {
                         actions_promise3 = actions_promise2.then( () => {
