--- a/tests/wpt/tests/html/rendering/the-details-element/details-display-list-item-crash.html
+++ b/tests/wpt/tests/html/rendering/the-details-element/details-display-list-item-crash.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
 <html>
 <head>
+<meta charset="utf-8">
+<link rel="help" href="https://github.com/servo/servo/issues/41231">
 <style>
     details {
         display: list-item;
@@ -17,3 +18,4 @@
     window.reload();
 </script>
 </body>
+</html>
