--- a/tests/wpt/mozilla/tests/css/css-property-listing.html
+++ b/tests/wpt/mozilla/tests/css/css-property-listing.html
@@ -11,6 +11,7 @@ let expected_longhands = [
   "align-content",
   "align-items",
   "align-self",
+  "alignment-baseline",
   "animation-delay",
   "animation-direction",
   "animation-duration",
@@ -30,6 +31,7 @@ let expected_longhands = [
   "background-position-y",
   "background-repeat",
   "background-size",
+  "baseline-shift",
   "baseline-source",
   "block-size",
   "border-block-end-color",
@@ -207,7 +209,6 @@ let expected_longhands = [
   "transition-timing-function",
   "translate",
   "unicode-bidi",
-  "vertical-align",
   "visibility",
   "white-space-collapse",
   "width",
@@ -220,24 +221,34 @@ let expected_longhands = [
 
 let expected_shorthands = {
   "all": [
+    "block-size",
+    "inline-size",
+    "inset-block-end",
+    "inset-block-start",
+    "inset-inline-end",
+    "inset-inline-start",
+    "max-block-size",
+    "max-inline-size",
+    "min-block-size",
+    "min-inline-size",
+    "overflow-block",
+    "overflow-inline",
     "border-block-start-color",
-    "border-block-start-style",
-    "border-block-start-width",
     "border-block-end-color",
-    "border-block-end-style",
-    "border-block-end-width",
     "border-inline-start-color",
-    "border-inline-start-style",
-    "border-inline-start-width",
     "border-inline-end-color",
+    "border-block-start-style",
+    "border-block-end-style",
+    "border-inline-start-style",
     "border-inline-end-style",
+    "border-block-start-width",
+    "border-block-end-width",
+    "border-inline-start-width",
     "border-inline-end-width",
     "border-start-start-radius",
     "border-start-end-radius",
     "border-end-start-radius",
     "border-end-end-radius",
-    "overflow-block",
-    "overflow-inline",
     "margin-block-start",
     "margin-block-end",
     "margin-inline-start",
@@ -246,186 +257,177 @@ let expected_shorthands = {
     "padding-block-end",
     "padding-inline-start",
     "padding-inline-end",
-    "inset-block-start",
-    "inset-block-end",
-    "inset-inline-start",
-    "inset-inline-end",
-    "block-size",
-    "min-block-size",
-    "max-block-size",
-    "inline-size",
-    "min-inline-size",
-    "max-inline-size",
+    "align-content",
+    "align-items",
+    "align-self",
+    "alignment-baseline",
+    "animation-delay",
+    "animation-direction",
+    "animation-duration",
+    "animation-fill-mode",
+    "animation-iteration-count",
+    "animation-name",
+    "animation-play-state",
+    "animation-timing-function",
+    "aspect-ratio",
     "background-color",
     "background-image",
     "background-position-x",
     "background-position-y",
     "background-repeat",
-    "background-attachment",
-    "background-clip",
-    "background-origin",
     "background-size",
+    "baseline-shift",
+    "baseline-source",
+    "border-spacing",
+    "bottom",
+    "box-shadow",
+    "caption-side",
+    "caret-color",
+    "clear",
+    "clip",
+    "clip-path",
+    "color",
+    "column-count",
+    "column-gap",
+    "column-width",
+    "container-name",
+    "container-type",
+    "content",
+    "cursor",
+    "display",
+    "filter",
+    "flex-basis",
+    "flex-grow",
+    "flex-shrink",
+    "float",
+    "font-family",
+    "font-language-override",
+    "font-size",
+    "font-stretch",
+    "font-style",
+    "font-synthesis-weight",
+    "font-variation-settings",
+    "font-weight",
+    "grid-auto-columns",
+    "grid-auto-flow",
+    "grid-auto-rows",
+    "grid-column-end",
+    "grid-column-start",
+    "grid-row-end",
+    "grid-row-start",
+    "grid-template-areas",
+    "grid-template-columns",
+    "grid-template-rows",
+    "height",
+    "image-rendering",
+    "justify-content",
+    "justify-items",
+    "justify-self",
+    "left",
+    "letter-spacing",
+    "line-height",
+    "list-style-image",
+    "list-style-type",
+    "max-height",
+    "max-width",
+    "min-height",
+    "min-width",
+    "object-position",
+    "opacity",
+    "order",
+    "outline-color",
+    "outline-offset",
+    "outline-style",
+    "outline-width",
+    "overflow-clip-margin",
+    "overflow-wrap",
+    "overflow-x",
+    "overflow-y",
+    "perspective",
+    "perspective-origin",
+    "pointer-events",
+    "position",
+    "quotes",
+    "right",
+    "rotate",
+    "row-gap",
+    "scale",
+    "text-align",
+    "text-align-last",
+    "text-indent",
+    "text-justify",
+    "text-shadow",
+    "text-transform",
+    "top",
+    "transform",
+    "transform-origin",
+    "transform-style",
+    "transition-behavior",
+    "transition-delay",
+    "transition-duration",
+    "transition-property",
+    "transition-timing-function",
+    "translate",
+    "width",
+    "will-change",
+    "word-break",
+    "word-spacing",
+    "line-break",
+    "z-index",
+    "border-image-outset",
+    "border-image-repeat",
+    "border-image-slice",
+    "border-image-source",
+    "border-image-width",
+    "text-decoration-line",
+    "text-decoration-color",
     "border-top-color",
-    "border-top-style",
-    "border-top-width",
     "border-right-color",
-    "border-right-style",
-    "border-right-width",
     "border-bottom-color",
-    "border-bottom-style",
-    "border-bottom-width",
     "border-left-color",
+    "border-top-style",
+    "border-right-style",
+    "border-bottom-style",
     "border-left-style",
+    "border-top-width",
+    "border-right-width",
+    "border-bottom-width",
     "border-left-width",
     "border-top-left-radius",
     "border-top-right-radius",
     "border-bottom-right-radius",
     "border-bottom-left-radius",
-    "border-image-source",
-    "border-image-outset",
-    "border-image-repeat",
-    "border-image-width",
-    "border-image-slice",
-    "display",
-    "position",
-    "float",
-    "clear",
-    "vertical-align",
-    "baseline-source",
-    "overflow-y",
-    "overflow-x",
-    "transform",
-    "rotate",
-    "scale",
-    "translate",
-    "isolation",
-    "perspective",
-    "perspective-origin",
-    "backface-visibility",
-    "transform-style",
-    "transform-origin",
-    "container-type",
-    "container-name",
-    "will-change",
-    "column-width",
-    "column-count",
-    "column-span",
-    "content",
-    "opacity",
-    "box-shadow",
-    "clip",
-    "filter",
-    "mix-blend-mode",
-    "font-family",
-    "font-style",
-    "font-variant-caps",
-    "font-weight",
-    "font-size",
-    "font-synthesis-weight",
-    "font-stretch",
-    "font-variation-settings",
-    "font-language-override",
-    "font-optical-sizing",
-    "line-height",
-    "visibility",
-    "image-rendering",
-    "border-collapse",
-    "empty-cells",
-    "caption-side",
-    "border-spacing",
-    "color",
-    "text-transform",
-    "text-indent",
-    "overflow-wrap",
-    "word-break",
-    "text-justify",
-    "text-align-last",
-    "text-align",
-    "letter-spacing",
-    "word-spacing",
-    "white-space-collapse",
-    "text-shadow",
-    "line-break",
-    "text-rendering",
-    "-webkit-text-security",
-    "text-wrap-mode",
-    "cursor",
-    "pointer-events",
-    "caret-color",
-    "list-style-position",
-    "list-style-type",
-    "list-style-image",
-    "quotes",
     "margin-top",
     "margin-right",
     "margin-bottom",
     "margin-left",
-    "overflow-clip-margin",
-    "outline-color",
-    "outline-style",
-    "outline-width",
-    "outline-offset",
     "padding-top",
     "padding-right",
     "padding-bottom",
     "padding-left",
-    "top",
-    "right",
-    "bottom",
-    "left",
-    "z-index",
+    "background-attachment",
+    "background-clip",
+    "background-origin",
+    "isolation",
+    "backface-visibility",
+    "column-span",
+    "font-variant-caps",
+    "font-optical-sizing",
+    "visibility",
+    "border-collapse",
+    "empty-cells",
+    "text-rendering",
+    "-webkit-text-security",
+    "text-wrap-mode",
+    "list-style-position",
     "flex-direction",
     "flex-wrap",
-    "justify-content",
-    "align-content",
-    "align-items",
-    "justify-items",
-    "flex-grow",
-    "flex-shrink",
-    "align-self",
-    "justify-self",
-    "order",
-    "flex-basis",
-    "height",
-    "min-height",
-    "max-height",
-    "width",
-    "min-width",
-    "max-width",
     "box-sizing",
     "object-fit",
-    "object-position",
-    "grid-row-start",
-    "grid-row-end",
-    "grid-auto-rows",
-    "grid-template-rows",
-    "grid-column-start",
-    "grid-column-end",
-    "grid-auto-columns",
-    "grid-template-columns",
-    "grid-auto-flow",
-    "grid-template-areas",
-    "column-gap",
-    "row-gap",
-    "aspect-ratio",
-    "clip-path",
     "table-layout",
-    "text-decoration-line",
     "text-decoration-style",
-    "text-decoration-color",
-    "transition-duration",
-    "transition-timing-function",
-    "transition-property",
-    "transition-delay",
-    "transition-behavior",
-    "animation-name",
-    "animation-duration",
-    "animation-timing-function",
-    "animation-iteration-count",
-    "animation-direction",
-    "animation-play-state",
-    "animation-fill-mode",
-    "animation-delay",
+    "mix-blend-mode",
+    "white-space-collapse",
   ],
   "animation": [
     "animation-name",
@@ -473,10 +475,10 @@ let expected_shorthands = {
   ],
   "border-block": [
     "border-block-start-width",
-    "border-block-end-width",
     "border-block-start-style",
-    "border-block-end-style",
     "border-block-start-color",
+    "border-block-end-width",
+    "border-block-end-style",
     "border-block-end-color",
   ],
   "border-block-color": [
@@ -521,10 +523,10 @@ let expected_shorthands = {
   ],
   "border-inline": [
     "border-inline-start-width",
-    "border-inline-end-width",
     "border-inline-start-style",
-    "border-inline-end-style",
     "border-inline-start-color",
+    "border-inline-end-width",
+    "border-inline-end-style",
     "border-inline-end-color",
   ],
   "border-inline-color": [
@@ -723,6 +725,11 @@ let expected_shorthands = {
     "transition-timing-function",
     "transition-delay",
     "transition-behavior",
+  ],
+  "vertical-align": [
+    "alignment-baseline",
+    "baseline-shift",
+    "baseline-source",
   ],
   "white-space": [
     "text-wrap-mode",
