--- a/tests/wpt/mozilla/tests/css/test_variable_serialization_specified.html
+++ b/tests/wpt/mozilla/tests/css/test_variable_serialization_specified.html
@@ -19,8 +19,6 @@ so an implementation could fail this test but still be conforming.
 // Values that should be serialized back to the same string.
 var values_with_unchanged_specified_value_serialization = [
   "var(--a)",
-  "var(--a) ",
-  "var( --a ) ",
   "var(--a, )",
   "var(--a,/**/a)",
   "1px var(--a)",
@@ -40,9 +38,16 @@ var values_with_unchanged_specified_value_serialization = [
   "var(--\\ffffff)",
 ];
 
-// Values that serialize differently, due to additional implied closing
-// characters at EOF.
+// Values that serialize differently.
 var values_with_changed_specified_value_serialization = [
+  // These serialize differently due to trimming whitespace.
+  ["var(--a ) ",                    "var(--a )"],
+  [" var( --a)",                    "var( --a)"],
+  ["  var(--a) ",                   "var(--a)"],
+  ["var( --a ) ",                   "var( --a )"],
+  [" var( --a )",                   "var( --a )"],
+  ["  var( --a ) ",                 "var( --a )"],
+  // These serialize differently due to additional implied closing characters at EOF.
   ["var(--a",                       "var(--a)"],
   ["var(--a , ",                    "var(--a , )"],
   ["var(--a, ",                     "var(--a, )"],
